--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,6 +1,13 @@
 {
+    "git.addedSign.hlGroup": "None",
+    "git.changedSign.hlGroup": "None",
+    "git.removedSign.hlGroup": "None",
+    "git.topRemovedSign.hlGroup": "None",
+    "git.changeRemovedSign.hlGroup": "None",
+    "metals.showInferredType": true,
+    "metals.statusBarEnabled": true,
     "coc.preferences.snippets.enable": false,
-    "rust-analyzer.diagnostics.enable": false,
+    "rust-analyzer.debug.runtime": "vimspector",
     "codeLens.enable": true,
     "coc.preferences.formatOnType": true,
     "coc.preferences.formatOnSaveFiletypes": [
@@ -8,55 +15,25 @@
         "rust",
         "json"
     ],
-    "cSpell.enabledLanguageIds": [
-        "vim",
-        "asciidoc",
-        "c",
-        "cpp",
-        "csharp",
-        "css",
-        "git-commit",
-        "go",
-        "handlebars",
-        "haskell",
-        "html",
-        "jade",
-        "java",
-        "javascript",
-        "javascriptreact",
-        "json",
-        "jsonc",
-        "latex",
-        "less",
-        "markdown",
-        "php",
-        "plaintext",
-        "python",
-        "pug",
-        "restructuredtext",
-        "rust",
-        "scala",
-        "scss",
-        "text",
-        "typescript",
-        "typescriptreact",
-        "yaml",
-        "yml",
-        "conf",
-        "hocon"
-    ],
+    // Enable / Disable the spell checker.
+    "cSpell.enabled": true,
     "cSpellExt.enableDictionaries": [
         "polish"
     ],
-    "cSpell.language": "en,pl",
+    "cSpell.language": "pl,en",
     "cSpell.userWords": [
         "Deps",
         "Dtoes",
         "Encryptor",
         "IMIE",
         "Inet",
+        "Klassifire",
+        "Logback",
+        "MAXALT",
         "Materializer",
         "Nostromo",
+        "Psql",
+        "RDIM",
         "Ravenetics",
         "SINGLEUTTERANCE",
         "Scalatest",
@@ -66,11 +43,42 @@
         "Unmarshaller",
         "Visiona",
         "WITAI",
+        "audytowych",
+        "chrono",
+        "curr",
+        "datasecie",
+        "datasetów",
+        "decryptor",
+        "dedup",
         "deserialization",
+        "elems",
+        "hocon",
+        "hocoon",
+        "intentami",
+        "intentow",
+        "intentu",
+        "intenty",
+        "mappingu",
+        "millis",
+        "noavx",
+        "nums",
+        "omap",
+        "onedrive",
+        "podproces",
+        "propertki",
+        "rdima",
+        "relogin",
+        "reqwest",
+        "równoznacznie",
+        "serde",
         "smsem",
+        "sqlx",
+        "subpackets",
         "techmo",
+        "tokenizacja",
         "unmarshall",
-        "unmarshalled"
+        "unmarshalled",
+        "walidować"
     ],
-    "git.enableGutters": false
+    "git.enableGutters": true
 }
