--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -22,63 +22,77 @@
     ],
     "cSpell.language": "pl,en",
     "cSpell.userWords": [
-        "Deps",
-        "Dtoes",
-        "Encryptor",
-        "IMIE",
-        "Inet",
-        "Klassifire",
-        "Logback",
-        "MAXALT",
-        "Materializer",
-        "Nostromo",
-        "Psql",
-        "RDIM",
-        "Ravenetics",
-        "SINGLEUTTERANCE",
-        "Scalatest",
-        "Toktme",
-        "USECONTEXTS",
-        "Unmarshal",
-        "Unmarshaller",
-        "Visiona",
-        "WITAI",
-        "audytowych",
-        "chrono",
-        "curr",
-        "datasecie",
-        "datasetów",
-        "decryptor",
-        "dedup",
-        "deserialization",
-        "elems",
-        "hocon",
-        "hocoon",
-        "intentami",
-        "intentow",
-        "intentu",
-        "intenty",
-        "mappingu",
-        "millis",
-        "noavx",
-        "nums",
-        "omap",
-        "onedrive",
-        "podproces",
-        "propertki",
-        "rdima",
-        "relogin",
-        "reqwest",
-        "równoznacznie",
-        "serde",
-        "smsem",
-        "sqlx",
-        "subpackets",
-        "techmo",
-        "tokenizacja",
-        "unmarshall",
-        "unmarshalled",
-        "walidować"
+      "BUILDKIT",
+      "CARDID",
+      "Comrak",
+      "Deps",
+      "Dtoes",
+      "Encryptor",
+      "IMIE",
+      "Inet",
+      "Klassifire",
+      "Logback",
+      "MAXALT",
+      "Materializer",
+      "Mountpoint",
+      "Nostromo",
+      "Psql",
+      "RDIM",
+      "Ravenetics",
+      "SINGLEUTTERANCE",
+      "STRIKETHROUGH",
+      "Scalatest",
+      "Toktme",
+      "USECONTEXTS",
+      "Unmarshal",
+      "Unmarshaller",
+      "Visiona",
+      "WECHMANN",
+      "WITAI",
+      "audytowych",
+      "chrono",
+      "cmark",
+      "curr",
+      "datasecie",
+      "datasetów",
+      "decryptor",
+      "dedup",
+      "deserialization",
+      "elems",
+      "hocon",
+      "hocoon",
+      "intentami",
+      "intentow",
+      "intentu",
+      "intenty",
+      "intrpted",
+      "mappingu",
+      "millis",
+      "mkdir",
+      "noavx",
+      "nums",
+      "omap",
+      "onedrive",
+      "oneshot",
+      "podproces",
+      "propertki",
+      "rdima",
+      "relogin",
+      "reqwest",
+      "restów",
+      "równoznacznie",
+      "serde",
+      "smsem",
+      "sqlx",
+      "subpackets",
+      "techmo",
+      "tokenizacja",
+      "tokenizuje",
+      "unmarshall",
+      "unmarshalled",
+      "visiony",
+      "walidować",
+      "wpłatomatu"
     ],
     "git.enableGutters": true
 }
