--- a/.config/systemd/user/dropbox.service
+++ b/.config/systemd/user/dropbox.service
@@ -1,12 +1,1 @@
-[Unit]
-Description=Dropbox as a system service
-After=network.target
-
-[Service]
-Type=simple
-ExecStart="/home/flakm/.dropbox-dist/dropboxd"
-Restart=on-failure
-RestartSec=1
-
-[Install]
-WantedBy=multi-user.target
+/nix/store/7ipmrf6mga29b6rl9scd4b5v52yn7fif-home-manager-files/.config/systemd/user/dropbox.service
