neovim native lsp for scala

--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -58,3 +58,7 @@ throw-keyids
 #verbose
 # Show expired subkeys
 #list-options show-unusable-subkeys
+
+default-key  7288322161C6A632
+
+keyserver  hkp://pool.sks-keyservers.net
