--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,6 @@
 	name = FlakM
 	signingKey = AD7821B8
 [core]
-	editor = vim
 	autocrlf = input
 [filesystem "Azul Systems, Inc.|1.8.0_252|/dev/nvme0n1p5"]
 	timestampResolution = 1001 microseconds
@@ -42,3 +41,5 @@
 
 [interactive]
     diffFilter = delta --color-only
+[alias]
+	dotfiles = !git --git-dir=/home/flakm/.cfg/ --work-tree=/home/flakm
