--- a/.localrc
+++ b/.localrc
@@ -6,6 +6,7 @@ DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 # Usefull aliases etc
 #
 alias spotify4k="/snap/bin/spotify --force-device-scale-factor=2.0  2> /dev/null > /dev/null &"
+alias config='git --git-dir=$HOME/.cfg/ --work-tree=$HOME'
 
 source ~/.secrets/.localrc
 
